# lionherd-core

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  validation_report.txt
.github/: LINK_CHECK_EXCLUSIONS.md
.github/workflows/: benchmarks.yml  ci.yml  create-baselines.yml  release.yml  validate-docs.yml  validate-links.yml  validate-notebooks.yml
benchmarks/: GUIDE.md  README.md
benchmarks/flow/: README.md  USAGE.md  profile.py  test_benchmarks.py
benchmarks/graph/: README.md  RESULTS.md  profile.py  test_benchmarks.py
benchmarks/lndl/: README.md  analysis.md  test_benchmarks.py
benchmarks/pile/: README.md  analysis.md  test_benchmarks.py
benchmarks/utils/: README.md  profiling_guide.md
docs/: DOC_STANDARD.md
docs/api/: errors.md  protocols.md
docs/integration/: lionherd_patterns.md
docs/migration/: v1.0.0-alpha5.md
docs/tutorials/: lndl_architecture.md  production_resilience.md  structured_llm_outputs.md
docs/user_guide/: api_design.md  processor_executor.md  protocols.md  type_safety.md  validation.md
notebooks/references/: broadcaster_eventbus.ipynb  concurrency_cancel.ipynb  concurrency_errors.ipynb  concurrency_patterns.ipynb  concurrency_primitives.ipynb  concurrency_priority_queue.ipynb  concurrency_resource_tracker.ipynb  concurrency_task.ipynb  concurrency_utils.ipynb  element.ipynb  errors.ipynb  event.ipynb  flow.ipynb  graph.ipynb  ln_async_call.ipynb  ln_fuzzy_match.ipynb  ln_fuzzy_validate.ipynb  ln_hash.ipynb  ln_json_dump.ipynb  node.ipynb  (+29 more)
scripts/: validate_docs.py
(+172 files in other folders)
