[project]
name = "lionherd-core"
version = "0.1.0"
description = "Core utilities, base classes, and protocols for lionherd ecosystem"
requires-python = ">=3.11"
dependencies = ["pydapter>=1.2.0", "anyio>=4.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lionherd_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: Unit tests",
  "property: Property-based tests",
  "slow: Slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::RuntimeWarning"]

[dependency-groups]
dev = [
  "hypothesis>=6.142.4",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-anyio>=0.0.0",
  "pytest-cov>=7.0.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.5.0",
  "testcontainers[postgres]>=3.7.0",
  "ruff>=0.14.2",
  "pre-commit>=4.3.0",
  "mypy>=1.18.2",
  "trio>=0.31.0",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.7",
]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocs-autorefs>=1.0.0"]
